[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
