[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
darling = "0.20.9"
futures = { version = "0.3.30", default-features = false }
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.64", features = ["extra-traits"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
